compiler/testData/diagnostics/tests/cast/AsErasedWarning.kt

fun ff(a: Any) = a <!UNCHECKED_CAST!>as MutableList<String><!>
